--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,36 @@
   display: flex;
   gap: 100px;
 }
+.form {
+  margin: 1rem;
+}
 .CV {
   flex: 1;
+  background-color: #fff;
+  min-width: 50%;
+  width: 90%;
+  color: #000;
+  padding: 1rem;
+  min-height: 30vh;
 }
-.personal-details {
+.personal-details{
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.inputs input{
+  width: 150px;
+}
+.delete-btn{
+  background-color: #dc2626;
+  border:none; outline: none;;
+  padding: 4px 6px;
+  cursor: pointer;
+}
+.add-btn{
+  background-color:#16a34a;
+    border: none;
+    outline: none;
+    padding: 4px 6px;
+    cursor: pointer;
 }
